# frontal_human_following

./: CMakeLists.txt  Kalman.h  README.md  frontal_human_following.cpp  frontal_human_following.h  human_tracking_module.cpp  human_tracking_module.h  install.sh  package.xml
include/frontal_human_following/: Kalman.h  frontal_human_following.h  human_tracking_module.h
src/: frontal_human_following.cpp  human_tracking_module.cpp
